--- a/src/Thesis.tex
+++ b/src/Thesis.tex
@@ -222,7 +222,7 @@
 \dedication{TO DO}
 % ================== ABSTRACT ==================
 
-% \input{./chapter/abstract}
+\input{./chapter/abstract}
 
 \cleardoublepage
 
@@ -239,7 +239,7 @@
 \input{./chapter/2}
 \input{./chapter/3}
 \input{./chapter/4}
-\input{./chapter/5}
+
 
 % % ================== NOTES ==================
 % \input{./chapter/notes}
