--- a/src/references.bib
+++ b/src/references.bib
@@ -72,3 +72,61 @@ isbn="978-3-540-32881-0",
 doi="10.1007/11685654_10",
 url="https://doi.org/10.1007/11685654_10"
 }
+
+@inproceedings{kingRaoTarjan,
+author = {King, Valerie and Rao, Satish and Tarjan, Robert},
+year = {1992},
+month = {01},
+pages = {157-164},
+title = {A Faster Deterministic Maximum Flow Algorithm}
+}
+
+@article{FordFulkerson,
+  title={Maximal Flow Through a Network},
+  author={Lester Randolph Ford and Delbert Ray Fulkerson},
+  journal={Canadian Journal of Mathematics},
+  year={1956},
+  volume={8},
+  pages={399 - 404},
+  url={https://api.semanticscholar.org/CorpusID:16109790}
+}
+
+
+@article{dynamicTrees,
+title = "A data structure for dynamic trees",
+abstract = "A data structure is proposed to maintain a collection of vertex-disjoint trees under a sequence of two kinds of operations: a link operation that combines two trees into one by adding an edge, and a cut operation that divides one tree into two by deleting an edge. Each operation requires O(log n) time. Using this data structure, new fast algorithms are obtained for the following problems: 1. (1) Computing nearest common ancestors. 2. (2) Solving various network flow problems including finding maximum flows, blocking flows, and acyclic flows. 3. (3) Computing certain kinds of constrained minimum spanning trees. 4. (4) Implementing the network simplex algorithm for minimum-cost flows. The most significant application is (2); an O(mn log n)-time algorithm is obtained to find a maximum flow in a network of n vertices and m edges, beating by a factor of log n the fastest algorithm previously known for sparse graphs.",
+author = "Sleator, {Daniel D.} and {Endre Tarjan}, Robert",
+year = "1983",
+month = jun,
+doi = "10.1016/0022-0000(83)90006-5",
+language = "English (US)",
+volume = "26",
+pages = "362--391",
+journal = "Journal of Computer and System Sciences",
+issn = "0022-0000",
+publisher = "Academic Press Inc.",
+number = "3",
+}
+
+@article{ITALIANO1986273,
+title = {Amortized efficiency of a path retrieval data structure},
+journal = {Theoretical Computer Science},
+volume = {48},
+pages = {273-281},
+year = {1986},
+issn = {0304-3975},
+doi = {https://doi.org/10.1016/0304-3975(86)90098-8},
+url = {https://www.sciencedirect.com/science/article/pii/0304397586900988},
+author = {G.F. Italiano},
+abstract = {A data structure is presented for the problem of maintaining a digraph under an arbitrary sequence of two kinds of operations: an Add operation that inserts an arc in the digraph, and a Searchpath operation that checks the presence of a path between a pair of nodes. Our data structure supports both operations in O(n) amortized time and requires O(n2) space, where n is the number of nodes in the digraph.}
+}
+
+@misc{orlin2019fastmaxflowalgorithm,
+      title={A Fast Max Flow Algorithm}, 
+      author={James B. Orlin and Xiao-Yue Gong},
+      year={2019},
+      eprint={1910.04848},
+      archivePrefix={arXiv},
+      primaryClass={cs.DS},
+      url={https://arxiv.org/abs/1910.04848}, 
+}
