--- a/src/Thesis.tex
+++ b/src/Thesis.tex
@@ -219,7 +219,8 @@
 %   Se non a me stesso\\
 %   Per cui grazie Giò, grazie\\
 % }
-\dedication{TO DO}
+
+\dedication{\say{Computer Science is no more about computers \\than astronomy is about telescopes}\\― Edsger W. Dijkstra }
 % ================== ABSTRACT ==================
 
 \input{./chapter/abstract}
