--- a/src/Thesis.tex
+++ b/src/Thesis.tex
@@ -242,7 +242,7 @@
 \input{./chapter/4}
 
 
-% % ================== NOTES ==================
+% ================== NOTES ==================
 % \input{./chapter/notes}
 
 % ================== CONCLUSIONS ==================
