--- a/src/Thesis.tex
+++ b/src/Thesis.tex
@@ -137,11 +137,13 @@
 }
 \lstset{style=mystyle}
 
+
+
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{5pt}
 
 % Metadata
-\hypersetup{pdftitle={Thesis},pdfauthor={Armando Coppola}, urlcolor=black, linkcolor=black, colorlinks=true}
+\hypersetup{pdftitle={Thesis},pdfauthor={Armando Coppola},linkcolor = black, citecolor = red, urlcolor = black, filecolor=black, colorlinks=true}
 \title{Achieving Max Flow in Strongly Polynomial Time for Sparse Networks:\\Beyond the Edmonds-Karp Algorithm}
 \author{Armando Coppola}
 \IDnumber{2003964}
