--- a/src/Thesis.tex
+++ b/src/Thesis.tex
@@ -5,12 +5,12 @@
 %
 % Bachelor of Science in Computer Science, Sapienza University of Rome.
 %
-% https://github.com/Exyss/bsc-thesis/
+% https://github.com/LavoroPulito/BSc-Thesis
 %
 % ============================================== %
 
 % Document Class
-\documentclass[binding=0.6cm, noexaminfo]{sapthesis}
+\documentclass[binding=0.6cm, noexaminfo, oneside]{sapthesis}
 
 % Packages
 \usepackage{microtype}
@@ -232,7 +232,7 @@
 \tableofcontents
 \let\cleardoublepage\clearpage
 
-\hypersetup{colorlinks=true, linkcolor=blue, citecolor=red}
+\hypersetup{colorlinks=false, hidelinks, linkcolor=blue, citecolor=red}
 
 
 \mainmatter
